--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -27,21 +27,20 @@
     border-radius: 50%;
 }
 
-/* blockquote::before {
-    content: '\93';
-    font-size: 50px;
-    position: relative;
-    color: #ff9800;
-    line-height: 20px;
-    bottom: -15px;
-    right: 5px;
+.box{
+    display: flex;
 }
-blockquote::after {
-    content: '\94';
-    font-size: 50px;
-    position: relative;
-    color: #ff9800;
-    line-height: 20px;
-    bottom: -15px;
-    right: 5px;
-} */
+.not-found{
+   
+        width: 100vw;
+        height: 100vh;
+        background-size: cover;
+}
+
+.text{
+    margin-left: 15px;
+}
+.icon{
+    font-size: 25px;    
+    color: lightseagreen;
+}
